dnd: Measure how often chrome accepts drag-drops.

Measure how often chrome accepts or rejects a drop operation during
a drag-and-drop session. This metric can inform whether chrome should
always accept the drop from the OS. This would allow chrome to use
asynchronous targeting to find the correct target, and update the
cursor etc. afterwards as needed.

BUG=804633

Change-Id: Idc439f39bae56c8d02a920440c0806795847479e
Reviewed-on: https://chromium-review.googlesource.com/c/1401226
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621264}
Former-commit-id: 1a118643f1c88c760ed0673a825cbe497ea21c02